examples/test/testpolicy17533.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17533
  namespace: namespace198
spec:
  podSelector:
    matchLabels:
      key25: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value22
          key15: value39
          key44: value11
      podSelector:
        matchLabels:
          key11: value19
          key20: value38
          key33: value34
